2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05- ------------------------------------------------------------------------------------------------------------
2025-05-14 ------------------------------------------------------------------------------------------------------------
* added a toolbar that shows LWR THB dims when cmdCombo+mouse is down over a dch for visual dragging/sizing info
    still 'glitchy' when dragging off left/top of outer BOX
* replaced dragMaskDiv and sizeMaskDiv with FF.moveDivRelative, FF.moveDivAbsolute, and FF.sizeDivRelative
* got rid of DCH_BASE.hasDiv -- all dch's have a __sysDiv so this was irrelevant
* got rid of FG.kmStates.sysDiv as redundant (same as FG.kmStates.dch.__sysDiv)

system overhaul: MUCH needs to change now to handle infinite canvas!
* changed ctrl+alt to alt+shift for better generic os-compatibility,  (still want to consider making this user defined)
* added alt+shift=mode1 (mode one), then release either key + press again = mode2,  (repeat toggles between mode1 and 2)
  when neither are pressed , is mode0
* removed scrollbars entirely and going with mode2 = drag
      lots to fix/debug because of this
* without scrollbars removed dch.__scroll entirely as children now 'float' within the host
* .zX/Y now simply defines an offset, positive OR negative, to style.transform all children by

* fixed up many issues with the new overhaul, handling drag/resize of mode1 nodes, and drag/offsetting in mode2 as well
    things are looking pretty stable right now!
* added a titlebar msg now too, 
    when in mode1, it shows the zX/Y offset of the parent BOX (or self if is a BOX)