@@ -6,7 +6,12 @@
 2025-05- ------------------------------------------------------------------------------------------------------------
 2025-05- ------------------------------------------------------------------------------------------------------------
 2025-05- ------------------------------------------------------------------------------------------------------------
-2025-05- ------------------------------------------------------------------------------------------------------------
+2025-05-15 ------------------------------------------------------------------------------------------------------------
+* accidentally 'undid' some changes via a wrong git command, but they seem to have been pretty minor as nothing broke
+* changed direct testing for keyAlt+keyShift to a function getCmdMode() to make future configuration options easier
+* solved a bug that allowed rootDch to be dragged if you went to mode1 AFTER going to mode2
+
+
 2025-05-14 ------------------------------------------------------------------------------------------------------------
 * added a toolbar that shows LWR THB dims when cmdCombo+mouse is down over a dch for visual dragging/sizing info
     still 'glitchy' when dragging off left/top of outer BOX
